pages/index/FavoritesGrid.module.css
#favorites {
  display: grid;
  width: 100%;
  grid-template-columns: repeat(auto-fill, minmax(25%, 250px));
  grid-auto-rows: auto;
  justify-content: space-around;
  gap: 1.5rem;
  margin: 1rem;
}

.item {
  border: 2px solid var(--highlight);
  background-color: var(--dark);
  padding: 1rem;
  text-align: center;
  transition: transform var(--speed) var(--ease);

  &:hover {
    transform: scale(var(--hover-scale));
    & h1 {
      color: var(--hover);
    }
  }

  & h1 {
    transition: color var(--speed) var(--ease);
    color: var(--accent);
  }

  & img {
    width: 100%;
    aspect-ratio: 1/1;
    object-fit: contain;
  }

  & h2 {
    font-size: 1em;
    color: var(--primary);
  }

  & h3 {
    font-size: 0.8em;
    color: var(--highlight);
  }
}

